# job-queue-system-2.0

./: .gitignore  Dockerfile.job_queue  Dockerfile.monitor  Dockerfile.worker  README.md  docker-compose.yml  docker-compose.yml.bak  pyproject.toml  restart-stack.sh  run-stress-test.sh  start-stack.sh  stop-stack.sh  stress-test.py
app/: main.py
app/core/: client.py  config.py  dependencies.py
app/endpoints/: dashboard.py  jobs.py
app/models/: enums.py  schemas.py
app/services/: monitor.py  queue.py  worker.py
app/templates/: dashboard.html  home.html  job_management.html
app/utils/: redis_keys.py  redis_ops.py
infra/: Pulumi.yaml  __main__.py
tests/api/: test_jobs_api.py
tests/integration/: test_advanced_job_flows.py  test_job_lifecycle.py
tests/services/: test_monitor_service.py  test_queue_service.py  test_worker_service.py
