[project]
name = "job-queue-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.11.18",
    "aioredis>=2.0.1",
    "fastapi[standard]>=0.115.12",
    "pydantic-settings>=2.9.1",
    "redis>=6.0.0",
    "uvicorn>=0.34.2",
]
